Keyword Spotting Example

--- a/07_Keyword_Spotting.ipynb
+++ b/07_Keyword_Spotting.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,18 +111,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "processed_docs = []\n",
     "\n",
     "for doc in docs:\n",
-    "    doc = gensim.parsing.preprocessing.remove_stopwords(doc)\n",
-    "    doc = gensim.parsing.preprocessing.stem_text(doc)\n",
-    "    doc = gensim.parsing.preprocessing.strip_punctuation(doc)\n",
+    "    clean_sentence_list = []\n",
+    "    \n",
+    "    for sentence in gensim.summarization.textcleaner.get_sentences(doc):\n",
+    "        sentence_clean = gensim.parsing.preprocessing.remove_stopwords(sentence)\n",
+    "        sentence_clean = gensim.parsing.preprocessing.stem_text(sentence_clean)\n",
+    "        sentence_clean = gensim.parsing.preprocessing.strip_punctuation(sentence_clean)\n",
+    "        sentence_clean = gensim.parsing.preprocessing.strip_multiple_whitespaces(sentence_clean)\n",
     "\n",
-    "    processed_docs.append(doc)"
+    "        clean_sentence_list.append(sentence_clean)\n",
+    "    \n",
+    "    processed_docs.append(clean_sentence_list)"
    ]
   },
   {
@@ -134,11 +140,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "search_phrase = \"trump\""
+    "search_phrase = \"taxes\""
    ]
   },
   {
@@ -150,16 +156,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'kjoio'"
+       "'tax'"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,28 +174,9 @@
     "search_phrase = gensim.parsing.preprocessing.remove_stopwords(search_phrase)\n",
     "search_phrase = gensim.parsing.preprocessing.stem_text(search_phrase)\n",
     "search_phrase = gensim.parsing.preprocessing.strip_punctuation(search_phrase)\n",
+    "search_phrase = gensim.parsing.preprocessing.strip_multiple_whitespaces(search_phrase)\n",
     "\n",
     "search_phrase"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(search_phrase.split())"
    ]
   },
   {
@@ -201,71 +188,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import Counter\n",
     "\n",
     "def search_keyword(doc, search_phrase):\n",
-    "    tokens = gensim.utils.tokenize(doc)\n",
+    "    text = ' '.join(doc)\n",
+    "    tokens = gensim.utils.tokenize(text)\n",
     "    return Counter(tokens)[search_phrase]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    ">>> from gensim.test.utils import datapath\n",
-    ">>> from gensim.models.word2vec import Text8Corpus\n",
-    ">>> from gensim.models.phrases import Phrases, Phraser\n",
-    ">>>\n",
-    ">>> sentences = Text8Corpus(datapath('testcorpus.txt'))\n",
-    ">>> phrases = Phrases(sentences, min_count=1, threshold=1)\n",
-    ">>>\n",
-    ">>> bigram = Phraser(phrases)\n",
-    ">>> sent = [u'trees', u'graph', u'minors']\n",
-    ">>> print(bigram[sent])\n",
-    "[u'trees_graph', u'minors'\n",
-    " \n",
-    "\n",
-    "# Build the bigram and trigram models\n",
-    "bigram = gensim.models.Phrases(data_words, min_count=5, threshold=100) # higher threshold fewer phrases.\n",
-    "trigram = gensim.models.Phrases(bigram[data_words], threshold=100)  \n",
-    "\n",
-    "# Faster way to get a sentence clubbed as a trigram/bigram\n",
-    "bigram_mod = gensim.models.phrases.Phraser(bigram)\n",
-    "trigram_mod = gensim.models.phrases.Phraser(trigram)\n",
-    "\n",
-    "def search_bigrams(doc, search_phrase):\n",
-    "    print(\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def search_trigrams(doc, search_phrase):\n",
-    "    print(\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 0 usages of 'kjoio' in document index 1\n",
-      "Found 0 usages of 'kjoio' in document index 2\n",
-      "Found 0 usages of 'kjoio' in document index 3\n",
-      "Found 0 usages of 'kjoio' in document index 4\n"
+      "Found 43 usages of 'tax' in document index 1\n",
+      "Found 32 usages of 'tax' in document index 2\n",
+      "Found 25 usages of 'tax' in document index 3\n",
+      "Found 44 usages of 'tax' in document index 4\n"
      ]
     }
    ],
@@ -277,11 +224,7 @@
     "    doc_index += 1\n",
     "    \n",
     "    if search_phrase_length == 1:\n",
-    "        phrase_count = search_keyword(doc, search_phrase)\n",
-    "    elif search_phrase_length == 2:\n",
-    "        phrase_count = search_bigrams(doc, search_phrase)\n",
-    "    elif search_phrase_length == 3:\n",
-    "        phrase_count = search_bigrams(doc, search_phrase)\n",
+    "        phrase_count = search_keyword(doc, search_phrase)  \n",
     "    else:\n",
     "        raise Exception(\"Unsupported Search Phrase\")\n",
     "    \n",
@@ -293,9 +236,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "results"
-   ]
+   "source": []
   }
  ],
  "metadata": {
