Adding Getting Started Notebook

--- a/04_Audio_Data_Model_Chromagram.ipynb
+++ b/04_Audio_Data_Model_Chromagram.ipynb
@@ -306,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  Define a Method to Extact MFCCs from an Audio File"
+    "####  Define a Method to Extact the Chromagram from an Audio File"
    ]
   },
   {
