--- a/08_Topic_Modeling.ipynb
+++ b/08_Topic_Modeling.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "  '0.001*\"say\" + 0.001*\"go\" + 0.001*\"know\" + 0.001*\"people\" + 0.001*\"ve\" + 0.001*\"want\" + 0.001*\"trump\" + 0.001*\"thing\" + 0.001*\"american\" + 0.001*\"think\"')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -287,18 +287,23 @@
       "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
       "\n",
       "  return pd.concat([default_term_info] + list(topic_dfs))\n",
-      "127.0.0.1 - - [07/Jan/2019 02:14:03] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Jan/2019 02:14:03] \"GET /LDAvis.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Jan/2019 02:14:03] \"GET /d3.js HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Jan/2019 02:14:03] \"GET /LDAvis.js HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "stopping Server...\n"
+      "127.0.0.1 - - [10/Jan/2019 23:31:47] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jan/2019 23:31:47] \"GET /LDAvis.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jan/2019 23:31:47] \"GET /d3.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jan/2019 23:31:47] \"GET /LDAvis.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jan/2019 23:31:48] code 404, message Not Found\n",
+      "127.0.0.1 - - [10/Jan/2019 23:31:48] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [11/Jan/2019 09:28:03] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Jan/2019 09:28:03] \"GET /LDAvis.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Jan/2019 09:28:03] \"GET /d3.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Jan/2019 09:28:03] \"GET /LDAvis.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [12/Jan/2019 09:05:21] code 404, message Not Found\n",
+      "127.0.0.1 - - [12/Jan/2019 09:05:21] \"GET /Cleveland_Museum_of_Natural_History_1023/wp-content/uploads/cuyahoga-arts-and-culture.png HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [12/Jan/2019 09:05:22] code 400, message Bad request syntax ('\\x16\\x03\\x01\\x02\\x00\\x01\\x00\\x01ü\\x03\\x03Ò\\x7f\\x7f¹\\x06gÍ8ËQcGÏÝ,b·¢f\\x95R©m<§\\x8c\\x8bÿ¯·\\x15° Mª9\\x15\\x10lÞÙ.\\tzC\\x04\"PXI®Ë\\x9f\\x10\\x9e6¾\\x1aB\\x1d½\\x9cõ29\\x00\"zz\\x13\\x01\\x13\\x02\\x13\\x03À+À/À,À0Ì©Ì¨À\\x13À\\x14\\x00\\x9c\\x00\\x9d\\x00/\\x005\\x00')\n",
+      "127.0.0.1 - - [12/Jan/2019 09:05:22] \"\u0016\u0003\u0001\u0002\u0000\u0001\u0000\u0001ü\u0003\u0003Ò¹\u0006gÍ8ËQcGÏÝ,b·¢fR©m<§ÿ¯·\u0015° Mª9\u0015\u0010lÞÙ.\tzC\u0004\"PXI®Ë\u00106¾\u001aB\u001d",
+      "½õ29\u0000\"zz\u0013\u0001\u0013\u0002\u0013\u0003À+À/À,À0Ì©Ì¨À\u0013À\u0014\u0000\u0000\u0000/\u00005\u0000\" 400 -\n",
+      "127.0.0.1 - - [12/Jan/2019 09:05:22] code 400, message Bad HTTP/0.9 request type ('\\x16\\x03\\x01\\x00Ã\\x01\\x00\\x00¿\\x03\\x03\\x7fT\\x08<ù.Ø¢\\x86QUX\\x9c³1È\\x03:\\x071ÎFè')\n",
+      "127.0.0.1 - - [12/Jan/2019 09:05:22] \"\u0016\u0003\u0001\u0000Ã\u0001\u0000\u0000¿\u0003\u0003<ù.Ø¢QUX³1È\u0003:\u00071ÎFè |ªÆúmY\" 400 -\n"
      ]
     }
    ],
