--- a/00_Getting_Started.ipynb
+++ b/00_Getting_Started.ipynb
@@ -591,9 +591,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "audio-data-insights",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "audio-data-insights"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -605,9 +605,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
